# nix-config

./: .gitignore  README.md  flake.nix  justfile
.github/workflows/: check.yml
config/: karabiner.json  zed-settings.json
docs/superpowers/plans/: 2026-07-13-nix-config-foundation.md  2026-07-14-agmsg-installer.md
docs/superpowers/specs/: 2026-07-13-nix-config-design.md  2026-07-14-agmsg-installer-design.md
files/: p10k.zsh  wezterm.lua
home/tt/: common.nix  darwin.nix  linux.nix
hosts/tinoMac-mini/: default.nix
modules/darwin/: defaults.nix  homebrew.nix  system.nix
modules/home/: applications.nix  git.nix  packages.nix  shell.nix  ssh.nix  terminal.nix
pkgs/: dcg.nix
pkgs/circleback-cli/: default.nix  package-lock.json  package.json
recipes/: cloudflare.md  turso.md  vercel.md
scripts/: agmsg  apply  rollback  setup-agent-config-ssh  update
templates/bun/: .gitignore  AGENTS.md  flake.nix  justfile  package.json
templates/bun/src/: index.test.ts  index.ts
templates/ios/: .gitignore  AGENTS.md  flake.nix  justfile  project.yml
templates/ios/Sources/: App.swift
templates/ios/Tests/: AppTests.swift
templates/minimal/: .env.op  AGENTS.md  flake.nix  justfile
templates/node-pnpm/: AGENTS.md  flake.nix  justfile  package.json
templates/python-uv/: .gitignore  AGENTS.md  flake.nix  justfile  pyproject.toml
templates/python-uv/src/python_project/: __init__.py
templates/python-uv/tests/: test_package.py
tests/: agmsg.sh  darwin.sh  eval.sh  home-manager.sh  packages.sh  secrets.sh  structure.sh  templates.sh
(+5 files in other folders)
