[project]
name = "python-project"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=9",
  "ruff>=0.14",
]

[tool.uv]
python-downloads = "never"

[tool.ruff]
target-version = "py313"
